--- a/src/pages/Projects.scss
+++ b/src/pages/Projects.scss
@@ -2,12 +2,20 @@
 
 .ProjectContainer {
   display: grid;
-  justify-content: space-evenly;
   align-items: center;
-  grid-template-columns: auto auto auto;
-  row-gap: $projects-gap;
-  max-width: 100vw;
-  height: inherit;
+  grid-template-columns: calc(100% - #{$projects-gap});
+  column-gap: $projects-gap;
+  row-gap: 3vh;
+  max-width: inherit;
+  height: auto;
   min-height: calc(100vh - #{$header-height});
-  padding-bottom: $projects-gap;
+  padding:  $projects-gap;
+
+  @media only screen and (min-width: 600px){
+    grid-template-columns: repeat(2, calc(50% - #{$projects-gap} * 2 / 3));
+  }
+
+  @media only screen and (min-width: 1000px){
+    grid-template-columns: repeat(3, calc(33% - #{$projects-gap} * 2 / 3));
+  }
 }
